<package>
  <name>image_sharper</name>
  <version>0.0.0</version>
  <description>image_sharper</description>
  <maintainer email="mrich7@gatech.edu">Megan Rich</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/image_sharper</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Megan Rich</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>

 

</package>
